--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/3.2.1/anime.min.js"></script>
   </head>
   <body id="snow">
-    <h1>Gustav Klimt's Kiss</h1>
+    <h1>Gustav Klimt's Kiss by DK Jeong</h1>
     <div class="box">
       <div class="conent">
         <img src="Gustav_Klimt_kissing.jpg" class="img">
